<resources>
    <string name="app_name">账号管理</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">账号管理</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_phone_setup">一键改机(IP)</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">设置</string>
    <string name="action_search">搜索</string>
    <string name="menu_add_account">添加账号</string>
    <string name="action_add">添加账号</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">登录成功</string>
    <string name="invalid_username">不是一个有效的用户名</string>
    <string name="invalid_password">密码必须大于五位数</string>
    <string name="login_failed">"登录失败"</string>
    <string name="default_user_name">请点击头像登录</string>
    <string name="default_user_phone">请点击头像登录</string>
    <string name="tv_phone_info">当前手机信息</string>
    <string name="tv_phone_type">型号：</string>
    <string name="tv_phone_imei">IMEI：</string>
    <string name="tv_proxy_info">当前IP信息</string>
    <string name="tv_proxy_city">城市：</string>
    <string name="tv_proxy_ip">IP：</string>
    <string name="bt_phone_setup">一键改机</string>
    <string name="bt_multi_setup">选择性改机</string>
    <string name="tv_use_scope">已选择的APP：</string>
    <string name="title_activity_multi_setup">MultiSetupActivity</string>
    <string name="app_list">默认所有用户已安装的程序</string>
    <string name="bt_commit_account">提交</string>
    <string name="add_account_succeed">添加账号成功</string>
    <string name="add_account_failed">添加账号失败</string>
    <string name="unlogin_tip">请先登录</string>
    <string name="unchanged_tip">未更改设备信息</string>

    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="hiding_row_sample">Hiding 3. Row Sample</string>
    <string name="showing_row_sample">Showing 3. Row Sample</string>
    <string name="scroll_to_column_position">Scroll to 15. column position</string>
    <string name="scroll_to_row_position">Scroll to 5. row position</string>
    <string name="show_hide_the_column">Showing / Hiding 1. column</string>
    <string name="table_pagination_details">Page %s, showing items %s - %s.</string>
    <string name="tv_account_tip">暂时没有更多数据，点击空白处刷新数据</string>
    <string name="bt_start_setup">完成</string>
    <string name="choose_ip">选择IP所属地区</string>
    <string name="choose_apps">选择应用</string>
    <string name="tv_setup_status">改机状态：</string>
    <string name="tv_setup_unstart">未开始</string>
    <string name="tv_cur_location">当前经纬度：</string>
    <string name="menu_setting">设置</string>
    <string name="tv_wx_login">微信自动登录</string>
    <string name="tiktok_setting">抖音自动登录</string>
    <string name="ks_setting">快手自动登录</string>
    <string name="jd_setting">京东自动登录</string>
    <string name="tv_login_switch">退出登录</string>
    <string name="pdd_setting">拼多多自动登录</string>
</resources>
