<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.account.manager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.account.manager.ui.add.AddAccountFragment"
        android:label="@string/menu_add_account"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/nav_phone_setup"
        android:name="com.account.manager.ui.phone.PhoneSetupFragment"
        android:label="@string/menu_phone_setup"
        tools:layout="@layout/fragment_phone_setup" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.account.manager.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.account.manager.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.account.manager.ui.setting.SettingFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_setting" />
</navigation>