<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_account_manager_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_nav_add_black_24dp"
            android:title="@string/menu_add_account" />
        <item
            android:id="@+id/nav_phone_setup"
            android:icon="@drawable/ic_phonelink_setup_black_24dp"
            android:title="@string/menu_phone_setup"
            android:visible="true" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools"
            android:visible="false" />
    </group>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share"
            android:visible="false" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting"
            android:visible="true" />
    </group>
    <!--<item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:visible="false"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:visible="true"
                android:title="@string/menu_setting" />
        </menu>
    </item>-->

</menu>
