<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        style="@style/tv_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_phone_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone_type" />

        <TextView
            android:id="@+id/tv_phone_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone_imei" />

        <TextView
            android:id="@+id/tv_phone_imei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <TextView
        style="@style/tv_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_proxy_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_proxy_ip" />

        <TextView
            android:id="@+id/tv_ip_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_proxy_city" />

        <TextView
            android:id="@+id/tv_ip_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        style="@style/tv_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_cur_location" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_cur_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        style="@style/tv_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_use_scope" />

    <TextView
        android:id="@+id/tv_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_list"
        android:textColor="@color/colorPrimary" />

    <RadioGroup
        android:id="@+id/rg_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_onekey_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_phone_setup"/>
        <RadioButton
            android:id="@+id/rb_multi_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_multi_setup"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_choose"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_choose_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_apps"/>
        <Button
            android:id="@+id/bt_choose_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_ip"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="选择地区："/>
        <TextView
            android:id="@+id/tv_ip_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
           />
    </LinearLayout>


    <Button
        android:id="@+id/bt_phone_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_phone_setup" />

   <!-- <Button
        android:id="@+id/bt_multi_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_multi_setup" />
-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/tv_setup_status"/>
        <TextView
            android:id="@+id/tv_setup_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_setup_unstart"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>