<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_wx_setting"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        style="@style/setting_item_style"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_item_divider_color" />
        <Switch
            android:id="@+id/sw_wx_setting"
            android:layout_width="match_parent"
            style="@style/setting_switch_style"
            android:layout_height="wrap_content"
            android:text="@string/tv_wx_login" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/user_item_divider_color" />
    <LinearLayout
        android:id="@+id/ll_tiktok_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/ll_wx_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/setting_item_style">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_item_divider_color" />
        <Switch
            android:id="@+id/sw_tiktok_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/setting_switch_style"
            android:text="@string/tiktok_setting"
           />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/user_item_divider_color" />

    <LinearLayout
        android:id="@+id/ll_ks_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_tiktok_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        style="@style/setting_item_style">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_item_divider_color" />
        <Switch
            android:id="@+id/sw_ks_setting"
            android:layout_width="match_parent"
            style="@style/setting_switch_style"
            android:layout_height="wrap_content"
            android:text="@string/ks_setting" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/user_item_divider_color" />
    <LinearLayout
        android:id="@+id/ll_jd_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_ks_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        style="@style/setting_item_style">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_item_divider_color" />
        <Switch
            android:id="@+id/sw_jd_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/setting_switch_style"
            android:text="@string/jd_setting"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/user_item_divider_color" />
    <LinearLayout
        android:id="@+id/ll_pdd_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_jd_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        style="@style/setting_item_style">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_item_divider_color" />
        <Switch
            android:id="@+id/sw_pdd_setting"
            android:layout_width="match_parent"
            style="@style/setting_switch_style"
            android:layout_height="wrap_content"
            android:text="@string/pdd_setting" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/user_item_divider_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        android:background="@color/user_item_bg_color"
        app:layout_constraintTop_toBottomOf="@+id/ll_pdd_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/user_item_divider_color" />
        <TextView
            android:id="@+id/tv_exit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/tv_login_switch"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/user_item_divider_color" />
</LinearLayout>